<resources>
    <string name="app_name">Integrating Sockets in Android Kotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_the_video">Name the Video</string>
    <string name="choose_video">Choose Video...</string>
    <string name="show_videos">Show Videos...</string>
    <string name="upload">Upload</string>
    <string name="title_activity_show_video">ShowVideoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="all_videos">All Videos</string>
    <string name="all_folders">All Folders</string>
    <string name="total_videos">Total Videos:</string>
    <string name="total_folders">Total Folders:</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="feedback">Feedback</string>
    <string name="themes">Themes</string>
    <string name="sort_order">Sort Order</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="nav_text">Welcome to World of Entertainment!!</string>
    <string name="video_name">Video Name</string>
    <string name="folder_name">Folder Name</string>
    <string name="duration">00:00</string>
    <string name="image">Image</string>
    <string name="loading">Loading..</string>
    <string name="semi_colon">:</string>
    <string name="lock">Lock Button</string>
    <string name="back_btn">Back Button</string>
    <string name="menu">Menu</string>
    <string name="prev_btn">Previous Button</string>
    <string name="next_btn">Next Button</string>
    <string name="repeat_btn">Repeat Button</string>
    <string name="fullscreen_btn">Fullscreen Button</string>
    <string name="play_btn">Play Button</string>
    //for menu
    <string name="audio_track">Audio Track</string>
    <string name="subtitles">Subtitles</string>
    <string name="booster">Booster</string>
    <string name="speed">Speed</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="pip_mode">PIP Mode</string>
    <string name="search">Search</string>

    <!--strings for video more features-->
    <string name="rename">Rename </string>
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="share">Share</string>
    <string name="orientation">Orientation</string>
    <string name="O">0</string>
    <string name="apply_to_all">Apply To All Upcoming Videos</string>

    <!-- strings for online playing features-->
    <string name="add_link">Paste Link</string>
    <string name="play">Play Video</string>
    <string name="play_online">Play Online</string>
    <string name="youtube">Youtube</string>

</resources>