<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".view.fragment.VideoStreamingFragment">

    <VideoView
        android:id="@+id/videoview_main"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:backgroundTint="@color/black" />

    <EditText
        android:id="@+id/et_video_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autoText="true"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/name_the_video"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_choose_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/choose_video" />

    <TextView
        android:id="@+id/tv_show_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/show_videos" />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/upload" />

    <ProgressBar
        android:id="@+id/progressBar_main"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:indeterminate="true"
        android:indeterminateTint="@android:color/holo_orange_dark"
        android:visibility="invisible" />

</LinearLayout>