<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.FullscreenActivity">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/fullscreen_player_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        app:controller_layout_id="@layout/custom_control_view" />

    <LinearLayout
        android:id="@+id/topController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#42000000"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            android:src="@drawable/back_icon"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/videoTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/video_name"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/menu"
            android:padding="10dp"
            android:src="@drawable/menu_icon"
            app:tint="@color/white" />

    </LinearLayout>


    <ImageButton
        android:id="@+id/lockButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/lock"
        android:src="@drawable/lock_open_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <LinearLayout
        android:id="@+id/bottomController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#42000000"
        android:gravity="end|bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/repeat_btn"
            android:src="@drawable/exo_controls_repeat_off"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/prevBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/prev_btn"
            android:padding="10dp"
            android:src="@drawable/previous_icon"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/nextBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/next_btn"
            android:padding="10dp"
            android:src="@drawable/next_icon"
            app:tint="@color/white" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/menu"
            android:padding="10dp"
            android:src="@drawable/exo_controls_fullscreen_enter"
            app:tint="@color/white" />

    </LinearLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/rewindFL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/rewindBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:contentDescription="@string/play_btn"
                android:src="@drawable/rewind_icon"
                android:visibility="gone"
                app:tint="@color/white" />

        </FrameLayout>


        <ImageButton
            android:id="@+id/playPauseButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/play_btn"
            android:focusable="true"
            android:src="@drawable/play_icon"
            app:tint="@color/white" />

        <FrameLayout
            android:id="@+id/forwardFL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/forwardBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:contentDescription="@string/play_btn"
                android:src="@drawable/forward_icon"
                android:visibility="gone"
                app:tint="@color/white" />

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>